fix dark mode on safari

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1358,7 +1358,6 @@ body {
   font-size: 0.8rem;
   font-weight: 600;
   white-space: nowrap;
-  fill: currentColor;
   pointer-events: none;
 }
 
